styles.css
body {
    background-color: #1F2937;
    font-family: Roboto, sans-serif;
}


#hero-main {
    font-size: 48px;
    font-weight: extra-bold;
    color: #F9FAF8;
    width: 420px;
    margin: 0;
}

button, .call-to-action {
    background-color: #3882F6;
    padding: 10px 30px;
    border-radius: 10px;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
}

li {
    list-style: none;
    text-decoration: none;
}

ul {
    display: flex;
    gap: 10px;
}

.image-placeholder {
    padding: 125px;
    background-color: gray;
    color: white;
    justify-content: stretch;
    width: auto;
}

.top-content {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    padding: 100px;
    gap: 70px;
}

.top-content-left {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
}



.info-box1, .info-box2, .info-box3, .info-box4 {
    border: 3px solid #3882F6;
    width: 150px;
    height: 150px;
    border-radius: 10px;
}

.middle-content {
    padding: 30px 0 30px 0px;
    background-color: white;
}

.info1-content, .info2-content, .info3-content, .info4-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 150px;
}

.random-info {
    text-align: center;
    margin: 30px 0 70px;
}

.middle-content-flex {
    background-color: white;
    display: flex;
    
    align-items: center;
    align-content: center;
    justify-content: center;
    gap: 70px;

}

.quote {
    background-color: #E5E7EB;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 100px 250px;
    flex-direction: column;
}

.quote-paragraph {
    font-size: 36px;
    font-style: italic;
    font-weight: 300;
}

.quote-writer {
    text-align: right;
}

button {
    flex-shrink: auto;
    width: 120px;
    color: white;
    font-weight: bold;
}

#footer-button {
    border-color: white;
}


#hero-secondary, a {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
    width: 420px;
    margin: 0px;
}

.call-to-action {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 50px;
    margin: 100px;
}

.call-to-action-left {
    display: flex;
    flex-direction: column;
}


.header-elements {
    display: flex;
    align-items: center;
    align-content: space-around;
    justify-content: space-around;
}

h1, h2 {
    font-weight: 700;
    font-family: Roboto, sans-serif;
}

